== 0.1.7.10 (WIP)

* Ruote remote participants
* Allow process umask to be configured, defaults to 022
* Updates to DaemonKit::Config hashes
* Fixed argument parsing bug (reported by Mathijs Kwik (bluescreen303)

== 0.1.7.9 2009-06-22

* Backtraces only logged on unclean shutdown
* AMQP generator got new keep alive code

== 0.1.7.8 2009-06-22

* Optional logging of all exceptions when the daemon process dies
  unexpectedly
* Update generated environment.rb to reflect new backtraces option

== 0.1.7.7 2009-06-22

* Fixed compatibility with rufus-scheduler-2.0.0 (or newer) in cron
  generator
* Started central eventmachine reactor management code
* Now depends on eventmachine

== 0.1.7.6 (Not released)

* Support for cucumber
* Fixed issue in daemon_kit:upgrade task
* Moved rspec generator into new home
* Removed conflicting rubigen generator, messed with our script directory
* Fixed bug where environment.rb overwrites some --config values (reported by Josh Owens)

== 0.1.7.5 2009-06-08

* New AbstractLogger
** Default Logger backend
** SysLogLogger support
* More documentation

== 0.1.7.4 2009-06-05

* Fixed bug with control script generator (thanks Sho Fukamachi)
* Enhanced deploy.rb template to check for current dk gem verion,
  unless vendored
* Fix bug in capistrano recipe for restarting daemons
* Added log:truncate rake task
* Error mails now handled by TMail

== 0.1.7.3 2009-05-31

* Removed dependency on daemons gem, now handled in house
* New argument management
* Some more docs

== 0.1.7.1 2009-05-28

* Fixed some minor issue with Capistrano support
* Added support for generating dog/monit configuration files via rake
* Initial implementation of ./script/* utilities

== 0.1.7 2009-05-26

* Capistrano deployment support

== 0.1.6 2009-05-13

* DaemonKit::Safety class to handle the trapping and logging of
  exceptions, as well as email notifications or Hoptoad notifications.
* New config/pre-daemonize and config/post-daemonize structure