@@ -164,20 +164,20 @@ module DaemonKit
       end
 
       def drop_privileges
-        if DaemonKit.configuration.user
-          begin
-            user = Etc.getpwnam( DaemonKit.configuration.user )
-            Process::Sys.setuid( user.uid.to_i )
-          rescue => e
-            $stderr.puts "Caught exception while trying to drop user privileges: #{e.message}"
-          end
-        end
         if DaemonKit.configuration.group
           begin
             group = Etc.getgrnam( DaemonKit.configuration.group )
             Process::Sys.setgid( group.gid.to_i )
           rescue => e
             $stderr.puts "Caught exception while trying to drop group privileges: #{e.message}"
+          end
+        end
+        if DaemonKit.configuration.user
+          begin
+            user = Etc.getpwnam( DaemonKit.configuration.user )
+            Process::Sys.setuid( user.uid.to_i )
+          rescue => e
+            $stderr.puts "Caught exception while trying to drop user privileges: #{e.message}"
           end
         end
       end
